Simplify mappers and fix bidirectional relationships